@@ -131,6 +131,7 @@ Bankswitch::Description Bankswitch::BSList[int(Bankswitch::Type::NumSchemes)] = 
   { "F8SC"    , "F8SC (8K Atari + ram)"       },
   { "FA"      , "FA (CBS RAM Plus)"           },
   { "FA2"     , "FA2 (CBS RAM Plus 24/28K)"   },
+  { "FC"      , "FC (32K Amiga)"              },
   { "FE"      , "FE (8K Decathlon)"           },
   { "MDM"     , "MDM (Menu Driven Megacart)"  },
   { "SB"      , "SB (128-256K SUPERbank)"     },
@@ -217,6 +218,7 @@ Bankswitch::ExtensionMap Bankswitch::ourExtensions = {
   { "F8SC"  , Bankswitch::Type::_F8SC   },
   { "FA"    , Bankswitch::Type::_FA     },
   { "FA2"   , Bankswitch::Type::_FA2    },
+  { "FC"    , Bankswitch::Type::_FC     },
   { "FE"    , Bankswitch::Type::_FE     },
   { "MDM"   , Bankswitch::Type::_MDM    },
   { "SB"    , Bankswitch::Type::_SB     },
@@ -273,6 +275,7 @@ Bankswitch::NameToTypeMap Bankswitch::ourNameToTypes = {
   { "F8SC"    , Bankswitch::Type::_F8SC   },
   { "FA"      , Bankswitch::Type::_FA     },
   { "FA2"     , Bankswitch::Type::_FA2    },
+  { "FC"      , Bankswitch::Type::_FC     },
   { "FE"      , Bankswitch::Type::_FE     },
   { "MDM"     , Bankswitch::Type::_MDM    },
   { "SB"      , Bankswitch::Type::_SB     },
