@@ -137,6 +137,8 @@
 
   * Fixed WD bankswitching
 
+  * Added FC bankswitching for Amiga's Power Play Arcade Video Game Album
+
   * Auto-detection of bankswitch scheme by file extension now includes
     more human-readable formats (not restricted to DOS 3-char length).
     See the documentation for the new names.
